--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,6 +55,17 @@ en:
         description: "Description"
         save: "Save"
         delete: "Delete"
+    users:
+      edit:
+        edit_profile: "Edit User Profile"
+        back: "Back"
+        info: "Basic Information"
+        firstname: "First Name"
+        lastname: "Last Name"
+        email: "Email"
+        password: "Password"
+        acitve: "Active?"
+        save: "Save"
   users:
     discover:
       title: "Fotobook"
